k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sideproj
  labels:
    istio-injection: "disabled"
