k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: sideproj
  labels: { app: web }
spec:
  replicas: 2
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      imagePullSecrets:
        - name: harbor-regcred
      containers:
        - name: web
          image: harbor.czhuang.dev/sideproj/web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
